--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       --primary-color: #3478F6;
       --secondary-color: #FF5733;
 
-      /* LEFT/RIGHT palette (US/KR) */
+      /* LEFT/RIGHT palette */
       --left-color: #2E4172;
       --center-left-color: #87CEEB;
       --center-color: #7F8C8D;
@@ -149,7 +149,7 @@
       background: #fff; border-radius: var(--border-radius); box-shadow: var(--box-shadow);
       overflow: hidden; transition: transform 0.18s ease, box-shadow 0.18s ease;
       content-visibility: auto; contain-intrinsic-size: 600px;
-      /* NEW: make rows parallel by stretching to grid row height */
+      /* keep rows parallel */
       display: flex; flex-direction: column; height: 100%;
     }
     .article-card:hover { transform: translateY(-4px); box-shadow: 0 8px 22px rgba(0,0,0,0.08); }
@@ -181,7 +181,7 @@
     .thumb-frame { position: relative; width: 100%; aspect-ratio: 16 / 9; background: #f2f2f2; overflow: hidden; border-radius: 12px; }
     .thumb-frame img.thumb { position: absolute; inset: 0; width: 100%; height: 100%; display: block; object-fit: cover; object-position: center; -webkit-user-select: none; user-select: none; }
 
-    /* LIST view tweaks */
+    /* LIST view */
     .cards-1 #news-container { justify-items: center; }
     .cards-1 .article-card  { width: min(92%, 920px); }
     .cards-1 .article-card .thumb-frame{ width: 100%; margin: 0; aspect-ratio: 2 / 1; border-radius: 12px; overflow: hidden; background: transparent; }
@@ -197,7 +197,7 @@
     .loading { text-align: center; padding: 28px; color: #666; }
     .error { background: #fee; color: #b40000; padding: 12px 14px; border-radius: var(--border-radius); border-left: 4px solid #b40000; margin-bottom: 16px; }
 
-    footer { background: var(--dark-gray); color: #fff; padding: 20px 0; margin-top: 28px; }
+    footer { background: #333; color: #fff; padding: 20px 0; margin-top: 28px; }
     footer .container { display: flex; justify-content: space-between; align-items: center; font-size: 13px; opacity: 0.9; }
 
     /* Responsive */
@@ -366,7 +366,7 @@
         this.autoRefreshMs = 30 * 60 * 1000;
         this.viewRoot = document.body;
         this.viewMode = '2'; // '1' | '2' | '3' | 'lr'
-        this.lastArticles = []; // NEW: cache for instant view switches
+        this.lastArticles = []; // cache for instant switching
         this.debouncedLoadNews = this.debounce(() => this.loadNews(), 400);
         this.bindUI();
         this.startAutoRefresh();
@@ -386,7 +386,7 @@
           this.loadNews();
         });
 
-        // selects (language removed)
+        // selects
         ['country-select','max-select','time-range']
           .forEach(id => document.getElementById(id).addEventListener('change', () => this.debouncedLoadNews()));
 
@@ -435,7 +435,7 @@
             else if (mode === '3') this.viewRoot.classList.add('cards-3');
             else if (mode === 'lr') this.viewRoot.classList.add('cards-2'); // same sizing as 2-up
 
-            // INSTANT switch: re-render from cache
+            // Instant switch using cached articles
             this.renderArticles(this.lastArticles);
           });
         });
@@ -464,7 +464,7 @@
           if (this.currentCategory) params.set('category', this.currentCategory);
           if (this.currentBias && this.currentBias !== 'default') params.set('bias', this.currentBias);
 
-          // Time range (server will filter)
+          // Time range (server will filter; GNews never sees from/to)
           const tr = document.getElementById('time-range').value;
           if (tr !== 'any') {
             let ms = 0;
@@ -531,7 +531,7 @@
         this.attachCardHandlers(el);
       }
 
-      // NEW: Left vs Right renderer using paired rows (keeps rows parallel)
+      // Left vs Right renderer using paired rows (keeps columns parallel)
       renderLeftRight(articles) {
         const el = document.getElementById('news-container');
 
@@ -548,14 +548,13 @@
         const L = leftPool.slice(0, perSideTarget);
         const R = rightPool.slice(0, perSideTarget);
 
-        // Pair rows: [L0,R0],[L1,R1], ...
+        // Pair rows: [L0,R0],[L1,R1], ... then trail-off if one side ends
         const pairs = Math.min(L.length, R.length);
         const html = [];
         for (let i = 0; i < pairs; i++) {
           html.push(this.cardHTML(L[i]));
           html.push(this.cardHTML(R[i]));
         }
-        // trailing side (if any) simply continues below (acceptable per spec)
         for (let i = pairs; i < L.length; i++) html.push(this.cardHTML(L[i]));
         for (let i = pairs; i < R.length; i++) html.push(this.cardHTML(R[i]));
 
@@ -655,4 +654,5 @@
   </script>
 </body>
 </html>
+
 
