--- a/index.html
+++ b/index.html
@@ -8,35 +8,33 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet"/>
 
   <style>
-    /* ====== THEME ======= */
     :root{
       --primary-color:#3478F6; --secondary-color:#FF5733;
-      --left-color:#2E4172; --center-left-color:#87CEEB; --center-color:#7F8C8D;
-      --center-right-color:#F39C12; --right-color:#E74C3C;
-      --neutral-color:#27AE60; --light-gray:#f5f5f5; --medium-gray:#e0e0e0;
-      --dark-gray:#333; --text-color:#333; --border-radius:12px;
-      --box-shadow:0 2px 8px rgba(0,0,0,.06);
+      --left-color:#243b6b;         /* deeper, friendlier tones */
+      --center-left-color:#9bd7ff;
+      --center-color:#7F8C8D;
+      --center-right-color:#F4B659;
+      --right-color:#E94B4B;
+      --light-gray:#f5f5f5; --medium-gray:#e0e0e0; --dark-gray:#333; --text-color:#333;
+      --border-radius:12px; --box-shadow:0 2px 8px rgba(0,0,0,.06);
     }
     *{margin:0;padding:0;box-sizing:border-box}
     body{font-family:'Roboto',system-ui,-apple-system,'Segoe UI',Roboto,Oxygen,Ubuntu,Cantarell,sans-serif;line-height:1.6;color:var(--text-color);background:#f9f9f9}
     .container{max-width:1200px;margin:0 auto;padding:0 15px}
     a{text-decoration:none;color:inherit}ul{list-style:none}button{cursor:pointer;border:none;background:none;font-family:inherit}
 
-    /* Header */
     header{background:#fff;box-shadow:var(--box-shadow);padding:14px 0;position:sticky;top:0;z-index:100}
     header .container{display:flex;gap:16px;justify-content:space-between;align-items:center}
     .logo h1{font-size:22px;font-weight:700;color:var(--primary-color);letter-spacing:.2px}
-    .logo span{color:#E74C3C;font-weight:500}
+    .logo span{color:#E74B4B;font-weight:500}
     .search-bar{flex:1}
     .search-form{display:flex;gap:10px}
     .search-bar input{width:100%;padding:10px 14px;border:1px solid var(--medium-gray);border-radius:20px;font-size:14px;background:#fff}
     .search-btn{background:var(--primary-color);color:#fff;padding:10px 16px;border-radius:20px;font-weight:500}
 
-    /* Layout */
     main{padding:18px 0}
     main .container{display:flex;gap:20px}
 
-    /* Sidebar */
     .sidebar{width:260px;background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:18px;position:sticky;top:78px;height:fit-content}
     .filter-section{margin-bottom:22px}
     .filter-section h2{font-size:18px;margin-bottom:12px;color:var(--dark-gray)}
@@ -45,7 +43,6 @@
     .toggle-row{display:flex;align-items:center;gap:10px;font-size:14px;margin-top:8px}
     .toggle-row input{transform:translateY(1px)}
 
-    /* Bias chips */
     .bias-filter{display:flex;justify-content:space-between;align-items:center;gap:8px}
     .bias-option{display:flex;flex-direction:column;align-items:center;cursor:pointer}
     .bias-circle{width:22px;height:22px;border-radius:50%;margin-bottom:6px;transition:transform .2s}
@@ -55,19 +52,14 @@
     .center-bias{background:var(--center-color)} .center-right-bias{background:var(--center-right-color)}
     .right-bias{background:var(--right-color)}
 
-    /* Reliability slider */
     .slider{width:100%;height:5px;background:linear-gradient(to right,#7e57c2,#27AE60,#ffeb3b);outline:none;-webkit-appearance:none;border-radius:5px}
     .slider::-webkit-slider-thumb{-webkit-appearance:none;width:18px;height:18px;background:#fff;border:2px solid var(--primary-color);border-radius:50%;cursor:pointer}
     .slider-labels{display:flex;justify-content:space-between;margin-top:6px;font-size:12px;color:#666}
 
-    /* Topics */
     .topics-list li{padding:8px 0;cursor:pointer;color:#555;transition:color .15s;display:flex;align-items:center;justify-content:space-between}
     .topics-list li:hover{color:var(--primary-color)} .topics-list li.active{color:var(--primary-color);font-weight:500}
 
-    /* Content */
     .content{flex:1;min-width:0}
-
-    /* Status bar */
     .status-bar{display:flex;flex-wrap:wrap;gap:10px;align-items:center;justify-content:space-between;background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:10px 14px;margin-bottom:14px;font-size:13px;color:#666}
     .pill{display:inline-flex;align-items:center;gap:8px;background:var(--light-gray);border-radius:999px;padding:6px 10px;font-weight:500}
     .dot{width:8px;height:8px;border-radius:50%;background:#3478F6;animation:pulse 1.8s ease-in-out infinite}
@@ -78,26 +70,25 @@
     .view-option{padding:10px 16px;font-weight:500;transition:background-color .15s;flex:0 0 auto}
     .view-option:hover{background:var(--light-gray)} .view-option.active{background:var(--primary-color);color:#fff}
 
-    /* Spectrumeter card */
-    .spectrumeter{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:16px;margin-bottom:16px}
-    .spec-row{display:flex;align-items:center;gap:16px}
-    .spec-svg{width:220px;min-width:220px;height:120px}
-    .spec-meta{display:flex;gap:8px;flex-wrap:wrap;font-size:12px;color:#555}
+    /* Spectrumeter (now in sidebar) */
+    .spectrumeter{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:12px}
+    .spec-row{display:flex;flex-direction:column;gap:10px}
+    .spec-svg{width:100%;height:120px}
     .needle{transform-origin:110px 100px;transition:transform .35s ease}
-    .see-more{margin-left:auto;background:#f0f6ff;color:#2054d2;padding:8px 10px;border-radius:8px;font-weight:600}
+    .spec-meta{display:flex;gap:8px;flex-wrap:wrap;font-size:12px;color:#555}
+    .see-more{align-self:flex-start;background:#f0f6ff;color:#2054d2;padding:6px 8px;border-radius:8px;font-weight:600}
 
-    .spec-details{display:none;margin-top:12px}
+    .spec-details{display:none;margin-top:8px}
     .spec-details.open{display:block}
-    .bar{height:10px;border-radius:6px;background:#eee;overflow:hidden}
+    .bar{height:8px;border-radius:6px;background:#eee;overflow:hidden}
     .bar > span{display:block;height:100%}
     .bar-left{background:var(--left-color)} .bar-lean-left{background:var(--center-left-color)}
     .bar-center{background:var(--center-color)} .bar-lean-right{background:var(--center-right-color)}
     .bar-right{background:var(--right-color)} .bar-unknown{background:#bbb}
-    .spec-grid{display:grid;grid-template-columns:110px 1fr 48px;gap:8px;align-items:center;font-size:13px}
-    .spec-chip{display:inline-flex;align-items:center;gap:6px;background:#f7f7f7;border-radius:999px;padding:4px 8px}
+    .spec-grid{display:grid;grid-template-columns:88px 1fr 38px;gap:6px;align-items:center;font-size:12px}
+    .spec-chip{display:inline-flex;align-items:center;gap:6px;background:#f7f7f7;border-radius:999px;padding:3px 7px}
     .chip-dot{width:10px;height:10px;border-radius:50%}
 
-    /* Grid + Cards */
     #news-container{display:grid;grid-template-columns:1fr;gap:18px;align-items:stretch}
     .cards-2 #news-container{grid-template-columns:repeat(2,1fr)}
     .cards-3 #news-container{grid-template-columns:repeat(3,1fr)}
@@ -120,7 +111,7 @@
     .bias-badge.lean-left{background:#eaf6ff;color:#2E86C1}
     .bias-badge.center{background:#f2f3f4;color:#7F8C8D}
     .bias-badge.lean-right{background:#fef5e7;color:#F39C12}
-    .bias-badge.right{background:#fde9e7;color:#E74C3C}
+    .bias-badge.right{background:#fde9e7;color:#E94B4B}
     .bias-badge.unknown{background:#eee;color:#666}
 
     .thumb-frame{position:relative;width:100%;aspect-ratio:16/9;background:#f2f2f2;overflow:hidden;border-radius:12px}
@@ -144,7 +135,6 @@
     footer{background:#333;color:#fff;padding:20px 0;margin-top:28px}
     footer .container{display:flex;justify-content:space-between;align-items:center;font-size:13px;opacity:.9}
 
-    /* Responsive */
     @media (max-width:1024px){.cards-3 #news-container{grid-template-columns:repeat(2,1fr)}}
     @media (max-width:900px){
       main .container{flex-direction:column}
@@ -158,9 +148,6 @@
       header .container{flex-direction:column;align-items:stretch}
       .search-form{width:100%}
       .cards-2 #news-container,.cards-3 #news-container{grid-template-columns:1fr}
-      .spec-svg{width:100%;min-width:auto}
-      .spec-row{flex-direction:column;align-items:flex-start}
-      .see-more{margin-left:0}
     }
   </style>
 </head>
@@ -186,14 +173,7 @@
         <section class="filter-section">
           <h2>Filters</h2>
 
-          <h3>Country</h3>
-          <select id="country-select" class="select">
-            <option value="us">United States</option>
-            <option value="gb">United Kingdom</option>
-            <option value="ca">Canada</option>
-            <option value="au">Australia</option>
-            <option value="in">India</option>
-          </select>
+          <!-- Country filter removed -->
 
           <h3>Articles</h3>
           <select id="max-select" class="select">
@@ -204,7 +184,6 @@
           </select>
         </section>
 
-        <!-- Bias + toggles -->
         <section class="filter-section">
           <h2>Bias</h2>
           <div class="bias-filter" id="bias-filter" role="group" aria-label="Bias filter">
@@ -232,6 +211,50 @@
             <input type="checkbox" id="balanced-toggle" />
             <span>Balanced view (even mix)</span>
           </label>
+        </section>
+
+        <!-- Spectrumeter moved here -->
+        <section class="filter-section">
+          <h2>Spectrumeter</h2>
+          <div class="spectrumeter" id="spectrumeter">
+            <div class="spec-row">
+              <svg class="spec-svg" viewBox="0 0 220 120" aria-hidden="true">
+                <defs>
+                  <!-- smoother multi-stop gradient (Stripe-ish) -->
+                  <linearGradient id="specGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%"   stop-color="#2b3a8a"/>
+                    <stop offset="15%"  stop-color="#4c6bd1"/>
+                    <stop offset="30%"  stop-color="#9bd7ff"/>
+                    <stop offset="50%"  stop-color="#b9c1c5"/>
+                    <stop offset="70%"  stop-color="#f4c46b"/>
+                    <stop offset="85%"  stop-color="#ff8a55"/>
+                    <stop offset="100%" stop-color="#e94b4b"/>
+                  </linearGradient>
+                </defs>
+                <path d="M20,100 A90,90 0 0,1 200,100" fill="none" stroke="#eee" stroke-width="16" stroke-linecap="round"/>
+                <path d="M20,100 A90,90 0 0,1 200,100" fill="none" stroke="url(#specGradient)" stroke-width="16" stroke-linecap="round"/>
+                <g font-size="10" fill="#666" text-anchor="middle">
+                  <text x="32"  y="112">Left</text>
+                  <text x="76"  y="112">CL</text>
+                  <text x="110" y="112">Center</text>
+                  <text x="144" y="112">CR</text>
+                  <text x="188" y="112">Right</text>
+                </g>
+                <circle cx="110" cy="100" r="6" fill="#444"/>
+                <g class="needle" id="spec-needle">
+                  <!-- neutral needle pointing right; rotation will fan ±90° -->
+                  <polygon points="110,100 106,100 170,86" fill="#444"/>
+                </g>
+              </svg>
+
+              <div class="spec-meta" id="spec-meta"></div>
+              <button class="see-more" id="spec-toggle" aria-expanded="false">See details</button>
+            </div>
+
+            <div class="spec-details" id="spec-details" aria-hidden="true">
+              <div class="spec-grid" id="spec-bars"></div>
+            </div>
+          </div>
         </section>
 
         <section class="filter-section">
@@ -289,48 +312,6 @@
           <button class="view-option" data-view="lr" role="tab" aria-selected="false">Left vs Right</button>
         </div>
 
-        <!-- Spectrumeter -->
-        <div class="spectrumeter" id="spectrumeter">
-          <div class="spec-row">
-            <svg class="spec-svg" viewBox="0 0 220 120" aria-hidden="true">
-              <defs>
-                <!-- smooth 5-stop gradient across the arc -->
-                <linearGradient id="specGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-                  <stop offset="0%"   stop-color="var(--left-color)"/>
-                  <stop offset="25%"  stop-color="var(--center-left-color)"/>
-                  <stop offset="50%"  stop-color="var(--center-color)"/>
-                  <stop offset="75%"  stop-color="var(--center-right-color)"/>
-                  <stop offset="100%" stop-color="var(--right-color)"/>
-                </linearGradient>
-              </defs>
-              <!-- background arc -->
-              <path d="M20,100 A90,90 0 0,1 200,100" fill="none" stroke="#eee" stroke-width="16" stroke-linecap="round"/>
-              <!-- gradient arc -->
-              <path d="M20,100 A90,90 0 0,1 200,100" fill="none" stroke="url(#specGradient)" stroke-width="16" stroke-linecap="round"/>
-              <!-- tick labels -->
-              <g font-size="10" fill="#666" text-anchor="middle">
-                <text x="32"  y="112">Left</text>
-                <text x="76"  y="112">CL</text>
-                <text x="110" y="112">Center</text>
-                <text x="144" y="112">CR</text>
-                <text x="188" y="112">Right</text>
-              </g>
-              <!-- needle pivot + needle -->
-              <circle cx="110" cy="100" r="6" fill="#444"/>
-              <g class="needle" id="spec-needle">
-                <polygon points="110,100 106,100 170,86" fill="#444"/>
-              </g>
-            </svg>
-
-            <div class="spec-meta" id="spec-meta"></div>
-            <button class="see-more" id="spec-toggle" aria-expanded="false">See details</button>
-          </div>
-
-          <div class="spec-details" id="spec-details" aria-hidden="true">
-            <div class="spec-grid" id="spec-bars"></div>
-          </div>
-        </div>
-
         <div id="error" class="error" style="display:none;"></div>
         <div id="loading" class="loading" style="display:none;">Loading latest news…</div>
 
@@ -353,7 +334,7 @@
         this.currentCategory=''; this.currentBias='default';
         this.autoRefreshMs=30*60*1000;
         this.viewRoot=document.body; this.viewMode='2';
-        this.lastArticles=[]; // cache for instant switching
+        this.lastArticles=[];
         this.debouncedLoadNews=this.debounce(()=>this.loadNews(),400);
         this.bindUI(); this.startAutoRefresh(); this.loadNews();
       }
@@ -364,8 +345,7 @@
         document.getElementById('year').textContent=new Date().getFullYear();
 
         document.getElementById('search-form').addEventListener('submit',e=>{e.preventDefault();this.loadNews()});
-
-        ['country-select','max-select','time-range'].forEach(id=>document.getElementById(id).addEventListener('change',()=>this.debouncedLoadNews()));
+        ['max-select','time-range'].forEach(id=>document.getElementById(id).addEventListener('change',()=>this.debouncedLoadNews()));
         document.getElementById('reliability').addEventListener('change',()=>this.debouncedLoadNews());
         document.getElementById('balanced-toggle').addEventListener('change',()=>this.debouncedLoadNews());
         document.getElementById('cluster-toggle').addEventListener('change',()=>this.debouncedLoadNews());
@@ -385,7 +365,6 @@
           });
         });
 
-        // view options — instant re-render
         const viewBtns=document.querySelectorAll('.view-option');
         viewBtns.forEach(btn=>{
           btn.addEventListener('click',()=>{
@@ -397,11 +376,11 @@
             else if(mode==='2') this.viewRoot.classList.add('cards-2');
             else if(mode==='3') this.viewRoot.classList.add('cards-3');
             else if(mode==='lr') this.viewRoot.classList.add('cards-2'); // same sizing as 2-up
-            this.renderArticles(this.lastArticles); // instant
+            this.renderArticles(this.lastArticles); // instant reflow, no refetch
           });
         });
 
-        // Spectrumeter details toggle
+        // Spectrumeter toggle
         const toggle=document.getElementById('spec-toggle');
         const details=document.getElementById('spec-details');
         toggle.addEventListener('click',()=>{
@@ -425,11 +404,10 @@
 
         try{
           const q=(document.getElementById('search-input').value||'latest news').trim();
-          const country=document.getElementById('country-select').value;
           const max=document.getElementById('max-select').value;
           const lang='en';
 
-          const params=new URLSearchParams({ q, country, lang, max, expand:'content' });
+          const params=new URLSearchParams({ q, lang, max, expand:'content' });
           if(this.currentCategory) params.set('category', this.currentCategory);
           if(this.currentBias && this.currentBias!=='default') params.set('bias', this.currentBias);
 
@@ -465,10 +443,11 @@
 
       renderArticles(articles){
         const el=document.getElementById('news-container');
-        if(!articles || !articles.length){ el.innerHTML=`<div class="loading" style="padding:36px;">No articles found. Try a different search or broaden the time range.</div>`; return; }
-
+        if(!articles || !articles.length){
+          el.innerHTML=`<div class="loading" style="padding:36px;">No articles found. Try a different search or broaden the time range.</div>`;
+          return;
+        }
         if(this.viewMode==='lr'){ this.renderLeftRight(articles); return; }
-
         el.innerHTML = articles.map(a=>this.cardHTML(a)).join('');
         const firstImg=el.querySelector('.thumb'); if(firstImg){ firstImg.loading='eager'; firstImg.setAttribute('fetchpriority','high'); }
         this.attachCardHandlers(el);
@@ -510,12 +489,12 @@
         for(const a of (articles||[])){ counts[a.bias] != null ? counts[a.bias]++ : counts.unknown++; }
         const total=(articles||[]).length||1;
 
-        // needle to the bucket with max count
+        // pick bucket with maximum share
         let maxIdx=0, maxVal=-1;
         buckets.forEach((b,i)=>{ if(counts[b]>maxVal){ maxVal=counts[b]; maxIdx=i; } });
 
-        // angle mapping: -72, -36, 0, 36, 72
-        const angles=[-72,-36,0,36,72];
+        // map to wider ±90° sweep to hit the right label precisely
+        const angles=[-90,-45,0,45,90];  // Left → Right
         const needle=document.getElementById('spec-needle');
         needle.style.transform=`rotate(${angles[maxIdx]}deg)`;
 
@@ -601,6 +580,7 @@
   </script>
 </body>
 </html>
+
 
 
 
