--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
   <style>
     :root{
       --primary-color:#3478F6; --secondary-color:#FF5733;
-      --left-color:#243b6b;         /* deeper, friendlier tones */
+      --left-color:#243b6b;
       --center-left-color:#9bd7ff;
       --center-color:#7F8C8D;
       --center-right-color:#F4B659;
@@ -26,7 +26,7 @@
     header{background:#fff;box-shadow:var(--box-shadow);padding:14px 0;position:sticky;top:0;z-index:100}
     header .container{display:flex;gap:16px;justify-content:space-between;align-items:center}
     .logo h1{font-size:22px;font-weight:700;color:var(--primary-color);letter-spacing:.2px}
-    .logo span{color:#E74B4B;font-weight:500}
+    .logo span{color:#E94B4B;font-weight:500}
     .search-bar{flex:1}
     .search-form{display:flex;gap:10px}
     .search-bar input{width:100%;padding:10px 14px;border:1px solid var(--medium-gray);border-radius:20px;font-size:14px;background:#fff}
@@ -70,12 +70,11 @@
     .view-option{padding:10px 16px;font-weight:500;transition:background-color .15s;flex:0 0 auto}
     .view-option:hover{background:var(--light-gray)} .view-option.active{background:var(--primary-color);color:#fff}
 
-    /* Spectrumeter (now in sidebar) */
+    /* Spectrumeter (sidebar) */
     .spectrumeter{background:#fff;border-radius:var(--border-radius);box-shadow:var(--box-shadow);padding:12px}
     .spec-row{display:flex;flex-direction:column;gap:10px}
     .spec-svg{width:100%;height:120px}
-    .needle{transform-origin:110px 100px;transition:transform .35s ease}
-    .spec-meta{display:flex;gap:8px;flex-wrap:wrap;font-size:12px;color:#555}
+    .needle{transform-origin:110px 92px;transition:transform .35s ease}
     .see-more{align-self:flex-start;background:#f0f6ff;color:#2054d2;padding:6px 8px;border-radius:8px;font-weight:600}
 
     .spec-details{display:none;margin-top:8px}
@@ -86,8 +85,6 @@
     .bar-center{background:var(--center-color)} .bar-lean-right{background:var(--center-right-color)}
     .bar-right{background:var(--right-color)} .bar-unknown{background:#bbb}
     .spec-grid{display:grid;grid-template-columns:88px 1fr 38px;gap:6px;align-items:center;font-size:12px}
-    .spec-chip{display:inline-flex;align-items:center;gap:6px;background:#f7f7f7;border-radius:999px;padding:3px 7px}
-    .chip-dot{width:10px;height:10px;border-radius:50%}
 
     #news-container{display:grid;grid-template-columns:1fr;gap:18px;align-items:stretch}
     .cards-2 #news-container{grid-template-columns:repeat(2,1fr)}
@@ -173,7 +170,7 @@
         <section class="filter-section">
           <h2>Filters</h2>
 
-          <!-- Country filter removed -->
+          <!-- Country & Language removed -->
 
           <h3>Articles</h3>
           <select id="max-select" class="select">
@@ -213,55 +210,49 @@
           </label>
         </section>
 
-        <!-- Spectrumeter moved here -->
+        <!-- Spectrumeter -->
         <section class="filter-section">
-  <h2>Spectrumeter</h2>
-  <div class="spectrumeter" id="spectrumeter">
-    <div class="spec-row">
-      <svg class="spec-svg" viewBox="0 0 220 120" aria-hidden="true">
-        <defs>
-          <!-- smooth, friendly gradient -->
-          <linearGradient id="specGradient" x1="0%" y1="0%" x2="100%" y2="0%">
-            <stop offset="0%"   stop-color="#2b3a8a"/>
-            <stop offset="15%"  stop-color="#4c6bd1"/>
-            <stop offset="30%"  stop-color="#9bd7ff"/>
-            <stop offset="50%"  stop-color="#b9c1c5"/>
-            <stop offset="70%"  stop-color="#f4c46b"/>
-            <stop offset="85%"  stop-color="#ff8a55"/>
-            <stop offset="100%" stop-color="#e94b4b"/>
-          </linearGradient>
-        </defs>
+          <h2>Spectrumeter</h2>
+          <div class="spectrumeter" id="spectrumeter">
+            <div class="spec-row">
+              <svg class="spec-svg" viewBox="0 0 220 120" aria-hidden="true">
+                <defs>
+                  <linearGradient id="specGradient" x1="0%" y1="0%" x2="100%" y2="0%">
+                    <stop offset="0%"   stop-color="#2b3a8a"/>
+                    <stop offset="15%"  stop-color="#4c6bd1"/>
+                    <stop offset="30%"  stop-color="#9bd7ff"/>
+                    <stop offset="50%"  stop-color="#b9c1c5"/>
+                    <stop offset="70%"  stop-color="#f4c46b"/>
+                    <stop offset="85%"  stop-color="#ff8a55"/>
+                    <stop offset="100%" stop-color="#e94b4b"/>
+                  </linearGradient>
+                </defs>
+                <!-- Arc lifted to y=92 -->
+                <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="#eee" stroke-width="16" stroke-linecap="round"/>
+                <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="url(#specGradient)" stroke-width="16" stroke-linecap="round"/>
+                <!-- Labels a bit lower -->
+                <g font-size="10" fill="#666" text-anchor="middle">
+                  <text x="32"  y="116">Left</text>
+                  <text x="76"  y="116">CL</text>
+                  <text x="110" y="116">Center</text>
+                  <text x="144" y="116">CR</text>
+                  <text x="188" y="116">Right</text>
+                </g>
+                <!-- Needle pivot moved to cy=92 -->
+                <circle cx="110" cy="92" r="6" fill="#444"/>
+                <g class="needle" id="spec-needle">
+                  <polygon points="110,92 106,92 170,78" fill="#444"/>
+                </g>
+              </svg>
 
-        <!-- Arc lifted from y=100 to y=92 to avoid label overlap -->
-        <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="#eee" stroke-width="16" stroke-linecap="round"/>
-        <path d="M20,92 A90,90 0 0,1 200,92" fill="none" stroke="url(#specGradient)" stroke-width="16" stroke-linecap="round"/>
+              <button class="see-more" id="spec-toggle" aria-expanded="false">See details</button>
+            </div>
 
-        <!-- Labels dropped a bit for spacing -->
-        <g font-size="10" fill="#666" text-anchor="middle">
-          <text x="32"  y="116">Left</text>
-          <text x="76"  y="116">CL</text>
-          <text x="110" y="116">Center</text>
-          <text x="144" y="116">CR</text>
-          <text x="188" y="116">Right</text>
-        </g>
-
-        <!-- Needle pivot & shape moved up to y=92 -->
-        <circle cx="110" cy="92" r="6" fill="#444"/>
-        <g class="needle" id="spec-needle">
-          <polygon points="110,92 106,92 170,78" fill="#444"/>
-        </g>
-      </svg>
-
-      <!-- chips row removed -->
-      <button class="see-more" id="spec-toggle" aria-expanded="false">See details</button>
-    </div>
-
-    <div class="spec-details" id="spec-details" aria-hidden="true">
-      <div class="spec-grid" id="spec-bars"></div>
-    </div>
-  </div>
-</section>
-
+            <div class="spec-details" id="spec-details" aria-hidden="true">
+              <div class="spec-grid" id="spec-bars"></div>
+            </div>
+          </div>
+        </section>
 
         <section class="filter-section">
           <h2>Reliability</h2>
@@ -381,8 +372,8 @@
             if(mode==='1') this.viewRoot.classList.add('cards-1');
             else if(mode==='2') this.viewRoot.classList.add('cards-2');
             else if(mode==='3') this.viewRoot.classList.add('cards-3');
-            else if(mode==='lr') this.viewRoot.classList.add('cards-2'); // same sizing as 2-up
-            this.renderArticles(this.lastArticles); // instant reflow, no refetch
+            else if(mode==='lr') this.viewRoot.classList.add('cards-2'); // use 2-up grid
+            this.renderArticles(this.lastArticles); // instant
           });
         });
 
@@ -488,69 +479,40 @@
 
       /* ===== Spectrumeter ===== */
       renderSpectrumeter(articles){
-  const buckets = ['left','lean-left','center','lean-right','right'];
-  const labels  = ['Left','Center Left','Center','Center Right','Right'];
+        const buckets=['left','lean-left','center','lean-right','right'];
+        const counts={left:0,'lean-left':0,center:0,'lean-right':0,right:0,unknown:0};
+        for(const a of (articles||[])){ counts[a.bias] != null ? counts[a.bias]++ : counts.unknown++; }
+        const total=(articles||[]).length||1;
 
-  const counts = { left:0, 'lean-left':0, center:0, 'lean-right':0, right:0, unknown:0 };
-  for (const a of (articles || [])) { counts[a.bias] != null ? counts[a.bias]++ : counts.unknown++; }
-  const total = (articles || []).length || 1;
+        // mode bucket
+        let maxIdx=0,maxVal=-1;
+        buckets.forEach((b,i)=>{ if(counts[b]>maxVal){ maxVal=counts[b]; maxIdx=i; } });
 
-  // mode bucket
-  let maxIdx = 0, maxVal = -1;
-  buckets.forEach((b, i) => { if (counts[b] > maxVal) { maxVal = counts[b]; maxIdx = i; } });
+        // Left→Right across semicircle: -180..0°
+        const needleEl=document.getElementById('spec-needle');
+        if(needleEl){
+          const angles=[-180,-135,-90,-45,0];
+          needleEl.style.transform=`rotate(${angles[maxIdx]}deg)`;
+        }
 
-  // Map Left→Right across the semicircle: -180° .. 0°
-  const needleEl = document.getElementById('spec-needle');
-  if (needleEl) {
-    const angles = [-180, -135, -90, -45, 0];  // Left, CL, Center, CR, Right
-    needleEl.style.transform = `rotate(${angles[maxIdx]}deg)`;
-  }
-
-  // Details-only (bars). Chips row removed.
-  const bars = document.getElementById('spec-bars');
-  const mkRow = (name, className, pct) => `
-    <div>${name}</div>
-    <div class="bar"><span class="${className}" style="width:${pct}%;"></span></div>
-    <div style="text-align:right">${pct}%</div>
-  `;
-  const pct = v => Math.round((v / total) * 100);
-  bars.innerHTML =
-    mkRow('Left','bar-left',pct(counts.left)) +
-    mkRow('Center Left','bar-lean-left',pct(counts['lean-left'])) +
-    mkRow('Center','bar-center',pct(counts.center)) +
-    mkRow('Center Right','bar-lean-right',pct(counts['lean-right'])) +
-    mkRow('Right','bar-right',pct(counts.right)) +
-    (counts.unknown ? mkRow('Unknown','bar-unknown',pct(counts.unknown)) : '');
-}
-
-
-
-
-        // summary chips
-        const meta=document.getElementById('spec-meta');
-        meta.innerHTML=buckets.map((b,i)=> {
-          const pct=Math.round((counts[b]/total)*100);
-          return `<span class="spec-chip"><span class="chip-dot" style="background:${colors[i]}"></span>${labels[i]}: ${pct}%</span>`;
-        }).join('');
-
-        // details bars
+        // Details bars only (chips removed)
         const bars=document.getElementById('spec-bars');
-        const mkRow=(name, className, pct)=>`
+        const mkRow=(name,cls,p)=>`
           <div>${name}</div>
-          <div class="bar"><span class="${className}" style="width:${pct}%;"></span></div>
-          <div style="text-align:right">${pct}%</div>
+          <div class="bar"><span class="${cls}" style="width:${p}%;"></span></div>
+          <div style="text-align:right">${p}%</div>
         `;
-        const pct=(v)=>Math.round((v/total)*100);
+        const pct=v=>Math.round((v/total)*100);
         bars.innerHTML =
           mkRow('Left','bar-left',pct(counts.left))+
           mkRow('Center Left','bar-lean-left',pct(counts['lean-left']))+
           mkRow('Center','bar-center',pct(counts.center))+
           mkRow('Center Right','bar-lean-right',pct(counts['lean-right']))+
           mkRow('Right','bar-right',pct(counts.right))+
-          (counts.unknown? mkRow('Unknown','bar-unknown',pct(counts.unknown)) : '');
+          (counts.unknown ? mkRow('Unknown','bar-unknown',pct(counts.unknown)) : '');
       }
 
-      /* ===== Card & utils ===== */
+      /* ===== Cards ===== */
       cardHTML(article){
         const title=this.truncate(article?.title,120)||'Untitled';
         const desc=this.truncate(article?.description,180)||'No description available.';
@@ -608,6 +570,7 @@
   </script>
 </body>
 </html>
+
 
 
 
